<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ativity.CadastroProdutoActivity"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/etNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintNomeProduto" />

    <EditText
        android:id="@+id/etValor"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintValorProduto" />

    <EditText
        android:id="@+id/etQtdProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintQtdProduto"/>

    <Button
        android:id="@+id/btnCadProduto"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:text="@string/btnCadastrar"/>

    <Button
        android:id="@+id/btnSairCadastroProduto"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSair" />
</LinearLayout>