<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroAdmin"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etLoginCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hintLogin"/>

    <EditText
        android:id="@+id/etSenhaCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hintSenha" />

    <Button
        android:id="@+id/btnCadastrarCad"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastrar" />

    <Button
        android:id="@+id/btnSairCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSair" />
</LinearLayout>