<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ativity.MenuProdutosActivity"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/btnListarProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnListarProd"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="212dp" />

    <Button
        android:id="@+id/btnCadastrarProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastrarProd"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="280dp" />

    <Button
        android:id="@+id/btnSairMenuProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnSair"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="430dp" />
</LinearLayout>